--- a/inputs.conf
+++ b/inputs.conf
@@ -17,3 +17,11 @@ source = docker_top
 interval = 1
 sourcetype = DockerEvents
 source = docker_events
+
+# watch all files in <path>
+[monitor:///var/log/containers/*.log]
+# extract `host` from the first group in the filename
+host_regex = /var/log/containers/(.*)_.*_.*\.log
+# set source type to Kubernetes
+sourcetype = kubernetes
+source = kubernetes_cluster
